src/main/java/com/example/linkingrest/error/exception/CommentNotFoundException.java
package com.example.linkingrest.error.exception;

public class CommentNotFoundException extends RuntimeException {
    public CommentNotFoundException(){
        super();
    }

}
